--- a/ConsoleApplication9.csproj
+++ b/ConsoleApplication9.csproj
@@ -35,6 +35,8 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -49,10 +51,13 @@
     <Compile Include="ICalculator.cs" />
     <Compile Include="IDisplayableNumber.cs" />
     <Compile Include="ITimedCalculationDisplay.cs" />
+    <Compile Include="Mersenne.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleCalculator.cs" />
-    <Compile Include="SimpleDisplay.cs" />
+    <Compile Include="SimpleDisplay.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
